# roboptim-core-config

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/roboptim/core/config/: loader.hh
src/: CMakeLists.txt  loader.cc
tests/: CMakeLists.txt  loader-sparse.stdout  loader.cc  loader.json  loader.stdout  loader.yaml
